Lab 9 finished